feat: +logos -assets

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="/vite.svg"
-		/>
+      rel="icon"
+      href="/svg/logo-dark.svg"
+      media="(prefers-color-scheme: dark)"
+      sizes="any"
+      type="image/svg+xml"
+    />
+    <link
+      rel="icon"
+      href="/svg/logo-light.svg"
+      media="(prefers-color-scheme:light)"
+      sizes="any"
+      type="image/svg+xml"
+    />
 		<link
 			rel="preconnect"
 			href="https://fonts.googleapis.com"
